# alec

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  tdd.sh
src/: CMakeLists.txt
src/gc/: CMakeLists.txt  data.h  entry.c  entry.h  gc.c  gc.h  log.c  log.h  object.h  ref.c  ref.h  reflist.c  reflist.h  refspan.c  refspan.h  reftype.c  reftype.h  type.c  type.h  typedefs.h  types.h
src/gc/__tests__/: CMakeLists.txt  log.hpp
src/runtime/: CMakeLists.txt  runtime.c  runtime.h
test/: CMakeLists.txt  catch.h  test_main.c
tests/: CMakeLists.txt  main.cpp  main_gen.cpp
tests/gc/: CMakeLists.txt  gc.hpp  log.hpp  main.cpp  test_gc.cpp
tests/module/gc/: gc.hpp  tests.hpp
tests/module/gc.tests/: gc.hpp  log.hpp
